raw/issue-32062-equality-relations-complexity--2016-11-11-04-24-18--0.log
commit 280362a02df97670dd08ed19557c81b504b395c3
Merge: 3ac9ec7 12f0b6f
Author: bors <bors@rust-lang.org>
Date:   Thu Nov 10 23:44:44 2016 -0800

    Auto merge of #36615 - sinkuu:e0243_0244, r=nrc
    
    Make E0243/E0244 message consistent with E0107
    
    E0243/E0233 prints `expected {}, found {}` on the span note, while E0107 prints it on the first line. This is confusing when both error occur simultaneously.
    
    This PR makes E0243/E0233 print `expected {}, found {}` on the first line.
    
    Code:
    
    ``` rust
    struct Foo<'a, 'b> {
        s: &'a str,
        t: &'b str,
    }
    
    type Bar<T, U> = Foo<T, U>;
    ```
    
    rustc output (before):
    
    ```
    error[E0107]: wrong number of lifetime parameters: expected 2, found 0
     --> test.rs:6:18
      |
    6 | type Bar<T, U> = Foo<T, U>;
      |                  ^^^^^^^^^ expected 2 lifetime parameters
    
    error[E0244]: wrong number of type arguments
     --> test.rs:6:18
      |
    6 | type Bar<T, U> = Foo<T, U>;
      |                  ^^^^^^^^^ expected no type arguments, found 2
    ```
    
    rustc output (after):
    
    ```
    error[E0107]: wrong number of lifetime parameters: expected 2, found 0
     --> /tmp/test.rs:6:18
      |
    6 | type Bar<T, U> = Foo<T, U>;
      |                  ^^^^^^^^^ expected 2 lifetime parameters
    
    error[E0244]: wrong number of type arguments: expected 0, found 2
     --> /tmp/test.rs:6:18
      |
    6 | type Bar<T, U> = Foo<T, U>;
      |                  ^^^^^^^^^ expected no type arguments
    ```
rustc: ./issue-32062-equality-relations-complexity
cargo rustc  -- -Ztime-passes -Zinput-stats
   Compiling issue-32062-equality-relations-complexity v0.1.0 (file:///root/benchmarks/issue-32062-equality-relations-complexity)
time: 0.000; rss: 41MB	parsing
Lines of code:             60
Pre-expansion node count:  580
time: 0.000; rss: 41MB	recursion limit
time: 0.000; rss: 41MB	crate injection
time: 0.000; rss: 41MB	plugin loading
time: 0.000; rss: 41MB	plugin registration
time: 0.013; rss: 63MB	expansion
time: 0.000; rss: 63MB	maybe building test harness
time: 0.000; rss: 63MB	maybe creating a macro crate
Post-expansion node count: 593
time: 0.000; rss: 63MB	checking for inline asm in case the target doesn't support it
time: 0.000; rss: 63MB	complete gated feature checking
time: 0.000; rss: 63MB	early lint checks
time: 0.000; rss: 63MB	AST validation
time: 0.002; rss: 63MB	name resolution
time: 0.000; rss: 63MB	lowering ast -> hir
time: 0.000; rss: 63MB	indexing hir
time: 0.000; rss: 63MB	attribute checking
time: 0.000; rss: 63MB	language item collection
time: 0.000; rss: 63MB	lifetime resolution
time: 0.000; rss: 63MB	looking for entry point
time: 0.000; rss: 63MB	looking for plugin registrar
time: 0.000; rss: 63MB	region resolution
time: 0.000; rss: 63MB	loop checking
time: 0.000; rss: 63MB	static item recursion checking
time: 0.000; rss: 67MB	compute_incremental_hashes_map
time: 0.000; rss: 67MB	load_dep_graph
time: 0.000; rss: 67MB	type collecting
time: 0.000; rss: 67MB	variance inference
time: 0.004; rss: 67MB	coherence checking
time: 0.003; rss: 71MB	wf checking
time: 0.000; rss: 71MB	item-types checking
time: 0.013; rss: 71MB	item-bodies checking
time: 0.000; rss: 71MB	drop-impl checking
time: 0.000; rss: 71MB	const checking
time: 0.000; rss: 71MB	privacy checking
time: 0.000; rss: 71MB	stability index
time: 0.000; rss: 71MB	intrinsic checking
time: 0.000; rss: 71MB	effect checking
time: 0.000; rss: 71MB	match checking
time: 0.000; rss: 71MB	liveness checking
time: 0.000; rss: 71MB	rvalue checking
time: 0.000; rss: 71MB	MIR dump
  time: 0.000; rss: 71MB	SimplifyCfg
  time: 0.000; rss: 71MB	QualifyAndPromoteConstants
  time: 0.000; rss: 71MB	TypeckMir
  time: 0.000; rss: 71MB	SimplifyBranches
  time: 0.000; rss: 71MB	SimplifyCfg
time: 0.000; rss: 71MB	MIR cleanup and validation
time: 0.001; rss: 71MB	borrow checking
time: 0.000; rss: 71MB	reachability checking
time: 0.000; rss: 71MB	death checking
time: 0.000; rss: 71MB	stability checking
time: 0.000; rss: 71MB	unused lib feature checking
time: 0.000; rss: 71MB	lint checking
time: 0.001; rss: 71MB	resolving dependency formats
  time: 0.000; rss: 71MB	NoLandingPads
  time: 0.000; rss: 71MB	SimplifyCfg
  time: 0.000; rss: 71MB	EraseRegions
  time: 0.000; rss: 71MB	AddCallGuards
  time: 0.001; rss: 71MB	ElaborateDrops
  time: 0.000; rss: 71MB	NoLandingPads
  time: 0.000; rss: 71MB	SimplifyCfg
  time: 0.000; rss: 71MB	InstCombine
  time: 0.000; rss: 71MB	Deaggregator
  time: 0.000; rss: 71MB	CopyPropagation
  time: 0.000; rss: 71MB	SimplifyLocals
  time: 0.000; rss: 71MB	AddCallGuards
  time: 0.000; rss: 71MB	PreTrans
time: 0.001; rss: 71MB	MIR optimisations
  time: 0.000; rss: 71MB	write metadata
  time: 0.014; rss: 71MB	translation item collection
  time: 0.000; rss: 71MB	codegen unit partitioning
  time: 0.000; rss: 71MB	internalize symbols
time: 0.036; rss: 71MB	translation
time: 0.000; rss: 71MB	assert dep graph
time: 0.000; rss: 71MB	serialize dep graph
  time: 0.000; rss: 71MB	llvm function passes [0]
  time: 0.000; rss: 71MB	llvm module passes [0]
  time: 0.011; rss: 79MB	codegen passes [0]
  time: 0.000; rss: 79MB	codegen passes [0]
time: 0.012; rss: 79MB	LLVM passes
time: 0.000; rss: 79MB	serialize work products
  time: 0.073; rss: 79MB	running linker
time: 0.074; rss: 79MB	linking
done
